WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
77774
[chromium] Compositor: multi-second hangs invalidating large layers
https://bugs.webkit.org/show_bug.cgi?id=77774
Summary
[chromium] Compositor: multi-second hangs invalidating large layers
Stephen White
Reported
2012-02-03 13:47:28 PST
Created
attachment 125405
[details]
Test case When invalidating large layers, the compositor pauses for several seconds at a time. The attached file takes several seconds to load with the compositor on. It is virtually instant with the compositor off. See also
http://code.google.com/p/chromium/issues/detail?id=111663
.
Attachments
Test case
(755 bytes, text/html)
2012-02-03 13:47 PST
,
Stephen White
no flags
Details
Patch
(2.10 KB, patch)
2012-02-03 13:57 PST
,
Stephen White
no flags
Details
Formatted Diff
Diff
Patch
(3.46 KB, patch)
2012-02-03 14:47 PST
,
Stephen White
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Stephen White
Comment 1
2012-02-03 13:57:15 PST
Created
attachment 125409
[details]
Patch
Stephen White
Comment 2
2012-02-03 14:47:43 PST
Created
attachment 125421
[details]
Patch
Stephen White
Comment 3
2012-02-03 15:01:02 PST
(In reply to
comment #2
)
> Created an attachment (id=125421) [details] > Patch
This version, in addition to invalidating tiles by iterating over the hash map rather than the tile indices, removes invalid tiles (those without texture backing) in TiledLayerChromium::pushPropertiesTo(), which limits the number of tiles by the size of the texture cache.
Adrienne Walker
Comment 4
2012-02-03 16:04:17 PST
Comment on
attachment 125421
[details]
Patch Unofficially LGTM. Thanks for this!
James Robinson
Comment 5
2012-02-03 16:10:37 PST
Comment on
attachment 125421
[details]
Patch R=me
WebKit Review Bot
Comment 6
2012-02-04 01:26:32 PST
Comment on
attachment 125421
[details]
Patch Clearing flags on attachment: 125421 Committed
r106732
: <
http://trac.webkit.org/changeset/106732
>
WebKit Review Bot
Comment 7
2012-02-04 01:26:36 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug