[chromium] Fix multi-second hangs in compositor invalidating large layers https://bugs.webkit.org/show_bug.cgi?id=77774

Reviewed by James Robinson.

Correctness covered by existing tests.

* platform/graphics/chromium/TiledLayerChromium.cpp:
(WebCore::TiledLayerChromium::pushPropertiesTo):
Remove tiles from the tiler when they are invalid (ie., no longer have
texture backing).
(WebCore::TiledLayerChromium::invalidateRect):
Instead of iterating over the tile indices (which may be very large),
iterate over the tile hash map instead.


Canonical link: https://commits.webkit.org/94667@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106732 268f45cc-cd09-0410-ab3c-d52691b4dbfc